apps/generic/overlays/tubesync/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tubesync
spec:
  template:
    spec:
      containers:
        - name: container
          image: ghcr.io/meeb/tubesync:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: yasr-volume
              mountPath: /config
              subPath: configs/tubesync/
            - name: main-volume
              mountPath: /downloads
              subPath: public/youtube/
          ports:
            - name: http
              containerPort: 4848
              protocol: TCP
