apps/generic/overlays/tubesync/patches/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tubesync
spec:
  ports:
    - name: http
      port: 4848
      protocol: TCP
      targetPort: http
